# LucidTrader

./: CMakeLists.txt  market.cpp  market.h  trader.cpp  trader.h  trader.nsi
market-android/jni/: Android.mk
